      especially helps with input/output of regular expressions.

*** Dictionary improvements/changes
    + Dictionaries can use words (unquoted) or regular expressions (quoted) for
      their keywords. When searching, an exact match has priority over a regular
      expression match.  Multiple regular expressions are matched in reverse
      order.
    + The default =#inputMode= is now '=merge=', which corresponds to the most
      general usage. The =#inputMode warn= corresponds to the previous default
      behaviour.
    + The *new* =#inputMode protect= can be used to conditionally merge default
      values into existing dictionaries.
    + *New* =digest()= method to calculate and return the SHA1 message digest

*** Improved list containers
    + It is now possible to append a =UList= to an existing =List= or
      =DynamicList= .
    + =DynamicList= is now much more flexible. It can be used with the
      =append()= method, or with the =setSize()= method and =operator[]=, as per
      =List= .  =DynamicList= also has more methods for adjusting the space
      allocated.
    + =SortableList= now uses stable sort and allows =reverseSort()= as well.
      =SortableList= is also more versatile - the indices mostly remain
      unallocated until they are required in the =sort()= method.  The sort
      indices can be deallocated with the =shrink()= method.  Works as expected
      with =transfer()= and assignment from other lists.
    + Specialization for =UList<bool>::operator[](..) const= to return =false=
      for out-of-range elements. This allows lazy evaluation with no noticeable
      change in performance.
    + =PackedList= has much better performance, *new* lazy evaluation and *new*
      auto-vivify of elements on assignment. Any auto-vivified elements will
      also flood-fill the gaps with zero.  The =append()= method can be used
      like in =DynamicList= to append a single element. The =set()= method can