@@ -58,6 +58,8 @@
       their keywords. When searching, an exact match has priority over a regular
       expression match.  Multiple regular expressions are matched in reverse
       order.
+    + The *new* =#includeIfPresent= directive is similar to the =#include=
+      directive, but does not generate an error if the file does not exist.
     + The default =#inputMode= is now '=merge=', which corresponds to the most
       general usage. The =#inputMode warn= corresponds to the previous default
       behaviour.
